--- a/src/__tests__/fixtures/table-hierarchy.html
+++ b/src/__tests__/fixtures/table-hierarchy.html
@@ -1,5 +1,5 @@
 <style>table{border-collapse: collapse}td{border:1px solid #ccc; height: 32px;}</style>
-<table id="confirmit_agg_table_4" class="t4_table table reportal-table reportal-categories reportal-fixed-header reportal-hierarchy-table reportal-barchart detailed-analysis-table">
+<table id="confirmit_agg_table_4" class="t4_table table reportal-table reportal-categories striped-columns reportal-hierarchy-table reportal-barchart detailed-analysis-table">
   <thead>
   <tr class="t4_tr">
     <td class="t4_cc">
