minor change in main file

--- a/src/visualTest/index.html
+++ b/src/visualTest/index.html
@@ -29,7 +29,7 @@
       var upgradedTable = new Reportal.TAhierarchy({
         source: document.querySelector('table.reportal-hierarchy-table'),
         blocks:["block1","block2","block3"],
-        rowheaderColumnIndex:0,
+        //rowheaderColumnIndex:0,
         sorting:{defaultSorting:[{column:5, direction:'asc'}, {column:0, direction:'desc'}]},
         search:{},
         flat:false,
